--- a/FrontEnd/ChatAppFront/src/app/components/login/login.component.html
+++ b/FrontEnd/ChatAppFront/src/app/components/login/login.component.html
@@ -1,9 +1,9 @@
 <div class="login-page">
   <div class="form">
     <form #data="ngForm" class="login-form">
-      <input type="email" placeholder="email" id="email" [(ngModel)]="data.email" name="email" required/>
+      <input type="text" placeholder="username" id="username" [(ngModel)]="data.username" name="username" required/>
       <input type="password" placeholder="password" id="password" [(ngModel)]="data.password" name="password" required/>
-      <input type="submit" value="log in" (click)="submitForm(data)"/>
+      <input type="submit" value="log in" [disabled]="!data.valid" (click)="submitForm(data)"/>
       <p class="message">Not registered? <a href="/register">Create an account</a></p>
     </form>
   </div>
