--- a/FrontEnd/ChatAppFront/src/app/components/register/register.component.html
+++ b/FrontEnd/ChatAppFront/src/app/components/register/register.component.html
@@ -2,7 +2,8 @@
   <div class="form">
     <form #data="ngForm" class="login-form">
       <input type="text" placeholder="username" [(ngModel)]="data.username" name="username" required/>
-      <input type="email" placeholder="email address" [(ngModel)]="data.email" name="email" required/>
+      <input type="text" placeholder="first name" [(ngModel)]="data.firstname" name="firstname" required/>
+      <input type="text" placeholder="last name" [(ngModel)]="data.lastname" name="lastname" required/>
       <input type="password" placeholder="password" [(ngModel)]="data.password" name="password" required/>
       <input type="submit" value="sign up" (click)="submitForm(data)">
       <p class="message">Already registered? <a href="">Sign In</a></p>
