--- a/UserApp/UserAppEAR/.settings/org.eclipse.wst.common.component
+++ b/UserApp/UserAppEAR/.settings/org.eclipse.wst.common.component
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="UserAppEAR">
         <wb-resource deploy-path="/" source-path="/EarContent" tag="defaultRootSource"/>
+        <dependent-module archiveName="UserAppWAR.war" deploy-path="/" handle="module:/resource/UserAppWAR/UserAppWAR">
+            <dependent-object/>
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <dependent-module archiveName="UserAppEJB.jar" deploy-path="/" handle="module:/resource/UserAppEJB/UserAppEJB">
             <dependent-object/>
             <dependency-type>uses</dependency-type>
