--- a/UserApp/UserAppEJB/.settings/org.eclipse.wst.common.component
+++ b/UserApp/UserAppEJB/.settings/org.eclipse.wst.common.component
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="UserAppEJB">
-        <wb-resource deploy-path="/" source-path="/ejbModule"/>
-        <wb-resource deploy-path="/" source-path="/src/main/java"/>
-        <wb-resource deploy-path="/" source-path="/src/main/resources" tag="defaultRootSource"/>
-        <wb-resource deploy-path="/" source-path="/src/test/java"/>
-        <wb-resource deploy-path="/" source-path="/src/test/resources"/>
-        <property name="java-output-path" value="/UserAppEJB/target/classes"/>
+        <wb-resource deploy-path="/" source-path="/ejbModule" tag="defaultRootSource"/>
+        <property name="java-output-path" value="/UserAppEJB/build/classes"/>
     </wb-module>
 </project-modules>
