--- a/FrontEnd/ChatAppFront/src/app/components/login/login.component.html
+++ b/FrontEnd/ChatAppFront/src/app/components/login/login.component.html
@@ -4,7 +4,7 @@
       <input type="text" placeholder="username" id="username" [(ngModel)]="data.username" name="username" required/>
       <input type="password" placeholder="password" id="password" [(ngModel)]="data.password" name="password" required/>
       <input type="submit" value="log in" [disabled]="!data.valid" (click)="submitForm(data)"/>
-      <p class="message">Not registered? <a href="/register">Create an account</a></p>
+      <p class="message">Not registered? <a routerLink="/register">Create an account</a></p>
     </form>
   </div>
 </div>
