--- a/FrontEnd/ChatAppFront/src/app/components/search/search.component.html
+++ b/FrontEnd/ChatAppFront/src/app/components/search/search.component.html
@@ -31,7 +31,7 @@
               <input type="submit" value="Delete request" (click)="deleteRequest(user.username)">
            
           </form>
-          <form class="add-friend" *ngIf="!haveISentRequest(user.username) && !hasSentMeRequest(user.username) && !isFriend(user.username)">
+          <form class="add-friend" *ngIf="!haveISentRequest(user.username) && !hasSentMeRequest(user.username) && !isFriend(user.username) && !isMe(user.username)">
               <input type="submit" value="Add" (click)="addFriend(user.username)">      
           </form>
       </tr>
