--- a/FrontEnd/ChatAppFront/src/app/components/home/home.component.html
+++ b/FrontEnd/ChatAppFront/src/app/components/home/home.component.html
@@ -17,7 +17,7 @@
 						<input type="submit" value="Search" (click)="searchUser(data)">
 					</form>
 				</div></li>
-				<li id="logout"><a routerLink="/" (click)="logout()">Log out</a></li>
+				<li id="logout"><a href="/" (click)="logout()">Log out</a></li>
 		</ul>
 		
 			<div class = "friend-request-section">
