popravljene greske; rad na frontendu: radi prihvatanje i odbijanje zahtjeva

--- a/FrontEnd/ChatAppFront/src/app/components/chat/chat.component.html
+++ b/FrontEnd/ChatAppFront/src/app/components/chat/chat.component.html
@@ -138,6 +138,19 @@
 				</table>
 				<br>
 				<br>
+				
+				<table class="online-friends">
+					<tr>
+						<th>
+							Offline friends:
+						</th>
+					</tr>
+					<tr *ngFor = "let friend of ws.offlineFriends">					
+						<td (click) = "showMessages(friend)">{{friend}}</td>
+					</tr>
+				</table>
+				<br>
+				<br>
 
 				<table class="online-friends">
 					<tr>
