--- a/FrontEnd/ChatAppFront/src/app/components/search/search.component.html
+++ b/FrontEnd/ChatAppFront/src/app/components/search/search.component.html
@@ -28,7 +28,7 @@
               <input type="submit" value="Decline"(click)="declineRequest(user.username)">
           </form>
           <form class="add-friend" *ngIf="haveISentRequest(user.username)">
-              <input type="submit" value="Delete request" (click)="deleteRequest(user.username)">
+              <input type="submit" value="Delete request">
            
           </form>
           <form class="add-friend" *ngIf="!haveISentRequest(user.username) && !hasSentMeRequest(user.username) && !isFriend(user.username) && !isMe(user.username)">
