rad na frontendu: radi dodavanje i brisanje prijatelja

--- a/FrontEnd/ChatAppFront/src/app/components/chat/chat.component.html
+++ b/FrontEnd/ChatAppFront/src/app/components/chat/chat.component.html
@@ -166,7 +166,7 @@
 				<br>
 				<br>
 				<form #data="ngForm">
-					<table class="online-friends">
+					<table class="create-group">
 						<tr>
 							<th>
 								Create new group:
