--- a/FrontEnd/ChatAppFront/src/app/components/chat/chat.component.css
+++ b/FrontEnd/ChatAppFront/src/app/components/chat/chat.component.css
@@ -287,7 +287,7 @@ li a:hover {
 	height:calc(100% - 2px);
 	
 	border-left:1px solid #E6E6E6;
-	
+	background-color: #E8E8E8;
 	overflow: scroll;
 	position: relative;
 	text-align: center;
@@ -321,10 +321,22 @@ li a:hover {
 .online-friends{
 	width:100%;
 	height:20%;
-	border:1px solid #D8D8D8;
+	
+	
 }
 
 .online-friends td{
-	height: 20%;
-	border: 1px solid #F0F0F0;
+	border-top: 1px solid #E0E0E0;
+	border-bottom: 1px solid #E0E0E0;
+	height: 30%;	
+}
+
+
+.create-group{
+	width:100%;
+	height:20%;	
+}
+
+.create-group td{
+	height: 20%;	
 }
